--- a/pré-traitement_base_de_donnees.ipynb
+++ b/pré-traitement_base_de_donnees.ipynb
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +157,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ffe05815986d6a5b47e0c6578e85623f72bba238a17eeccfa19a37bf61a87fe9"
+   }
   }
  },
  "nbformat": 4,
